--- a/app_server/views/meals.hbs
+++ b/app_server/views/meals.hbs
@@ -3,7 +3,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Dive Sites - Bhaccasyoniztas Beach Resort Website Template</title>
+	<title>Foods - Travlr Getaways Website Template</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
@@ -14,15 +14,19 @@
 				<div class="box">
 					<div>
 						<div class="body">
-							<h1>Travel</h1>
-							<ul id="sites">
-			{{#each trips}}					
+							<h1>Meals</h1>
+							<ul id="foods">
+			{{#each meals_hbs}}
 								<li>
-									<a href=“travel"><img src="images/{{this.image}}" alt="Img"></a>
-									<h2><a href=“travel">{{this.name}}</a></h2>
-									{{{this.description}}}
+									<h2><a href="meals">{{this.name}}</a></h2>
+									<div class="infos">
+										<a href="meals"><img src="images/{{this.image}}" alt="Img" height="169" width="780"><span class="cover"></span></a>
+										<p>
+											<span>{{this.title}}</span>{{{this.description}}}
+										</p>
+									</div>
 								</li>
-			{{/each}}					
+			{{/each}}
 							</ul>
 						</div>
 					</div>
