connected mongodb/mongoose, added schemas, seeded db

--- a/app_server/views/contact.hbs
+++ b/app_server/views/contact.hbs
@@ -19,7 +19,7 @@
 								<table>
 									<tbody>
 									{{#each contact_hbs}}
-										{{{name}}}
+										{{{contact_name}}}
 										{{{email}}} 
 										{{{subject}}}  
 									{{/each}}
